# fireGl

./: #CMakeLists.txt#  #run.sh#  .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  ji.txt  readme.org  run.sh
.clangd/index/: data.h.405B633CF6BE2664.idx  data.h.F7E76C880828AF75.idx  glProg.cpp.A58D2C27BBB12F17.idx  glProg.h.947AED3C294207CC.idx  glProg.h.A8FF64C12311BDCB.idx  glad.c.9E8915E7E8FDBF56.idx  glad.h.DA5FC6A908105C1E.idx  glad.h.F27625822B09E8FA.idx  glfw3.h.558859ADBC506631.idx  glfw3.h.73EDE8DCD52D85AC.idx  initWindow.cpp.94997D1F2B89D556.idx  initWindow.h.A6032A03C782D361.idx  initWindow.h.D20B7470BAA8E25A.idx  khrplatform.h.36D46CF86BCC870A.idx  khrplatform.h.7EE3B63443321877.idx  main.cpp.0D91CA6BA7B43220.idx
emacs/: myinit.org
include/user/: data.h  glProg.h  initWindow.h
res/shaders/: shader.frag  shader.vert
src/: #main.cpp#  glProg.cpp  initWindow.cpp  main.cpp
src/.clangd/index/: glProg.cpp.227B9524A7320D2A.idx  glad.c.6656F2F2B64D397A.idx  initWindow.cpp.D63BAF9498CA45E1.idx  main.cpp.17BEC269CE91B47D.idx
